# tonik

./: Cargo.toml  README.md
crates/tonik/: Cargo.toml
crates/tonik-activity/: Cargo.toml
crates/tonik-activity/src/: main.rs
crates/tonik-bot/: Cargo.toml
crates/tonik-bot/src/: events.rs  lib.rs  main.rs  user.rs
crates/tonik-bot/src/providers/: device.rs  sms.rs
crates/tonik-cli/: Cargo.toml
crates/tonik-cli/src/: main.rs
crates/tonik-sms/: Cargo.toml
crates/tonik-sms/src/: main.rs
crates/tonik/src/: lib.rs
src/: lib.rs  main.rs
