[package]
name = "tonik-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonik = { path = "../tonik" }
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
serde_json = "1.0.115"
