[package]
name = "tonik"
version = "0.1.0"
edition = "2021"

authors = ["Ben Evans <ben@bluechimp.io"]
description = "Library for interacting with the Teltonika Router API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bencevans/tonik"
homepage = "https://github.com/bencevans/tonik"
keywords = ["teltonika", "router", "api", "tonik"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["gzip", "json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.16.1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["macros"] }
